# http_server

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt  Makefile  concurrent_http_server.c  concurrent_http_server_A.c  concurrent_http_server_B.c  config.c  config.h  generate_response_string.c  generate_response_string.h  http.c  http.h  http_server.c  http_server.conf  mpm.c  mpm.h  parse_request.c  parse_request.h.gch  process_request.c  process_request.h  string.h  utility.h
src/code_snipet/: close_thread_with_sem.c  epoll_multi_process.c  epoll_socket_test.c  http_client.c  named_pipe_test.c  pipe_test.c  request_parse_performance_test.c  sem_test.c  shm_test.c  sizeof_struct_epoll_event.c  two_epoll_on_same_socket_test.c
src/core/: http.h  parse_request.c  parse_request.h  process_request.c  process_request.h
src/mpm/: CMakeLists.txt  mpm.c  mpm.h
src/mpm/A/: mpm_A.c  mpm_A.h  worker_process_A.c  worker_process_A.h
src/mpm/B/: handle_request.c  handle_request.h  mpm_B.c  mpm_B.h  worker_process_B.c  worker_process_B.h
src/mpm_A/: mpm_A.c  mpm_A.h  worker_process_A.c  worker_process_A.h
src/mpm_B/: handle_request.c  handle_request.h  mpm_B.c  mpm_B.h  worker_process.c  worker_process.h  worker_process_B.h
src/utility/: flag.c  flag.h  socket_list.c  socket_list.h  utility.c  utility.h
